unpackaged/main/default/objects/Sponsor__c/fields/General_Number__c.field-meta.xml
<CustomField>
    <fullName>General_Number__c</fullName>
    <description>The main number for the sponsor company</description>
    <label>General Number</label>
    <type>Phone</type>
</CustomField>