unpackaged/main/default/objects/Sponsor__c/fields/Point_of_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_Email_Address__c</fullName>
    <label>Point of Contact Email Address</label>
    <type>Email</type>
</CustomField>