unpackaged/main/default/objects/Sponsor__c/fields/Point_of_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_Name__c</fullName>
    <label>Point of Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>