unpackaged/main/default/objects/Sponsor__c/fields/Point_of_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_Phone_Number__c</fullName>
    <label>Point of Contact Phone Number</label>
    <type>Phone</type>
</CustomField>