unpackaged/main/default/objects/Sponsor__c/fields/Sponsor_ID__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_ID__c</fullName>
    <description>Unique ID for each sponsor</description>
    <displayFormat>S-{0000}</displayFormat>
    <label>Sponsor ID</label>
    <type>AutoNumber</type>
</CustomField>