unpackaged/main/default/objects/Sponsor__c/fields/Sponsor_Website__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Website__c</fullName>
    <description>The main website for the sponsor company</description>
    <label>Sponsor Website</label>
    <type>Url</type>
</CustomField>